--- a/quickopen-gui/package.json
+++ b/quickopen-gui/package.json
@@ -1,16 +1,12 @@
 {
   "name": "quickopen-gui",
   "version": "1.0.0",
+  "description": "QuickOpen GUI Application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "electron": "^36.2.1"
+  "dependencies": {
+    "electron": "^28.0.0"
   }
 }
